deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desktopctl
spec:
  template:
    spec:
      containers:
      - name: desktopctl
        image: images.home.mtaylor.io/desktopctl
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
      serviceAccountName: desktopctl
