deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
